Implementação inicial da classe DataInputStream

--- a/ArvoreB/.vscode/settings.json
+++ b/ArvoreB/.vscode/settings.json
@@ -1,5 +1,17 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "array": "cpp",
+        "string_view": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cwchar": "cpp",
+        "exception": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "initializer_list": "cpp",
+        "iosfwd": "cpp",
+        "string": "cpp",
+        "cstring": "cpp"
     }
 }
