Avanço nas classes Data(Input/Output)Stream

--- a/ArvoreB/.vscode/settings.json
+++ b/ArvoreB/.vscode/settings.json
@@ -12,6 +12,7 @@
         "initializer_list": "cpp",
         "iosfwd": "cpp",
         "string": "cpp",
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "*.tcc": "cpp"
     }
 }
