Conserta as classes Data(Input/Output)Stream

--- a/ArvoreB/.vscode/settings.json
+++ b/ArvoreB/.vscode/settings.json
@@ -13,6 +13,7 @@
         "iosfwd": "cpp",
         "string": "cpp",
         "cstring": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "stdexcept": "cpp"
     }
 }
