--- a/ArvoreB/.vscode/settings.json
+++ b/ArvoreB/.vscode/settings.json
@@ -32,6 +32,7 @@
         "streambuf": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "xtr1common": "cpp"
     }
 }
