Adiciona alguns cabeçalhos à classe ArvoreB

--- a/ArvoreB/.vscode/settings.json
+++ b/ArvoreB/.vscode/settings.json
@@ -33,6 +33,7 @@
         "system_error": "cpp",
         "tuple": "cpp",
         "typeinfo": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "functional": "cpp"
     }
 }
