Upload .gitattributes para ignorar a documentação na estatística

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,9 @@
 ###############################################################################
 * text=auto
 
+###############################################################################
+# Marca a pasta doc/ como documentação.
+# Isso faz com que ela seja ignorada nas estatísticas.
+###############################################################################
+
+doc/* linguist-documentation
