--- a/ArvoreB/.vscode/launch.json
+++ b/ArvoreB/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/a.exe",
+            "program": "${workspaceFolder}/ArvoreB/src/a.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/ArvoreB/src",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
